# parallely

./: .gitignore  Cargo.toml  README.md  large.txt
.run/: Run.run.xml
src/: app.rs  console.rs  context.rs  event.rs  main.rs  message.rs  parallely.rs  shutdown_handler.rs  task_executor.rs
src/task_executor/: child_ext.rs
