[package]
name = "parallely"
version = "0.1.3"
description = "parallely is a command line process parallelization executor."
authors = ["BppleMan"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bppleman/parallely"

[dependencies]
ansi-to-tui = "6.0.0"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
textwrap = "0.16.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["time"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
