[package]
name = "parallely"
version = "0.1.5"
description = "parallely is a command line process parallelization executor."
authors = ["BppleMan"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bppleman/parallely"

[dependencies]
ansi-to-tui = "6.0.0"
async-stream = "0.3.6"
clap = { version = "4.5.18", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
textwrap = "0.16.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["time"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", default-features = false, features = ["Win32_System_Console"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.159"
